# PROJECT-S_DriversBio

./: .gitignore  README.md  package.json
apps/extension/: README.md  content.js  manifest.json  popup.html  popup.js
apps/mobile/: .gitignore  README.md  package.json  pubspec.yaml
apps/mobile/lib/: main.dart
apps/mobile/src/: demo-content.md  demo-session.js
apps/mobile/test/: widget_test.dart
apps/web/: README.md  app.js  index.html  package.json  styles.css
docs/: api-design.md  architecture.md  product.md  prompt-strategy.md
scripts/: run-tests.js
services/ai-agent-py/: .env.example  README.md  pyproject.toml
services/ai-agent-py/src/driveai_agent/: __init__.py  app.py  config.py  dependencies.py
services/ai-agent-py/src/driveai_agent/graphs/: dialogue_graph.py  exam_graph.py  ingestion_graph.py  notification_graph.py
services/ai-agent-py/src/driveai_agent/nodes/: dialogue.py  exam.py  ingestion.py  notification.py
services/ai-agent-py/src/driveai_agent/prompts/: dialogue.py  exam.py  ingestion.py  notification.py
services/ai-agent-py/src/driveai_agent/schemas/: common.py  dialogue.py  exam.py  ingestion.py  notification.py
services/ai-agent-py/src/driveai_agent/tools/: notifications.py  past_exams.py  repositories.py  retrievers.py
services/ai-agent-py/src/driveai_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/ai-agent-py/tests/: test_graph_builders.py
services/api/: README.md  package.json
services/api/src/: app.js  app.test.js  server.js  store.js
services/worker/: README.md  package.json
(+1 files in other folders)
